# xde-desktop

./: .gitignore  .indent.pro  AUTHORS  ChangeLog  Makefile.am  NEWS  README.in  README.md  README.md.in  RELEASE.md  THANKS  TODO  autogen.sh  configure.ac  configure.sh  configure.template
data/: Makefile.am  xde-desktop.desktop
man/: Makefile.am  xde-desktop.pod
src/: Makefile.am  xde-desktop.c
